Overflow bug

--- a/client/src/styles/right_carousel.css
+++ b/client/src/styles/right_carousel.css
@@ -5,7 +5,7 @@
 }
 
 .right_carousel{
-    margin-top: 20%;
+    margin-top: 15%;
 }
 
 .carousel_slide{
